--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,14 @@
 {
   "matching_mode": "sequential",
   "delete_on_use_fields": [
+    "男背景",
     "即梦背景"
   ],
-  "current_product_type": "CTkComboBox",
-  "result_font_size": 14,
-  "current_preset": "女-即梦"
+  "current_product_type": "裤子",
+  "result_font_size": 10,
+  "last_library_path": "/Users/jerry/Documents/GitHub/Prompt/模版.xlsx",
+  "selected_custom_param": "性别",
+  "selected_custom_value": "女",
+  "custom_params_map": {},
+  "current_template_override": "模特全身居中，镜头与腰平齐，站立码头中央，脚下有真实投影。穿鞋，脚部清晰，不可赤脚。\n\n人物特征：{男五官}\n\n服装：\n- 必须100%还原【产品图】款式、颜色、剪裁、细节（如口袋、拉链、缝线），不更改。\n- 若产品图仅含部分服装，智能补全缺失部分（如上衣、内搭、配饰）,必须重新搭配鞋子，整体穿搭自然、帅气、活力，参照大型穿搭网站原则。配饰≤3处，金属选银冷金暖，避免娘气。\n- 体现布料质感（棉质纹理、轻微褶皱、垂坠感），不可光滑无纹理或塑料感。\n\n皮肤：保留自然肌理（毛孔、细微阴影），避免过度磨皮。\n\n背景：{男背景}，模糊处理，降低饱和度，缩小人物/物体比例，仅保留建筑轮廓与灯光氛围。允许轻微杂乱（散落小物、路人自然走动）增加真实感。\n\n摄影参数：\n- 光圈 f/2.8\n- 焦点锁定模特\n- 50mm焦距\n- 写实风，光线充足明亮，高对比度，强调服装细节，模特与背景明显分离。\n\n禁止：长发飘逸、赤脚、悬浮感、背景人群密集、鲜艳小物、Logo、水印、标准微笑、过度对称构图、光滑无纹理服装、塑料感皮肤、服装不符、鞋子不匹配、上衣缺失。\n特别禁止：卡通风格、Q版比例、大眼娃娃脸、幼龄化、非真人质感。\n\n必须生成：写实摄影风格，真人模特，自然生活感。"
 }
