feat(核心): 增强持久化文件检查和自动创建功能
添加文件缺失检测和自动创建默认文件功能，优化字段值选择逻辑
完善设置界面，增加清除已用记录按钮
更新模板内容和背景选项

--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,9 @@
 {
-  "matching_mode": "random",
+  "matching_mode": "sequential",
   "delete_on_use_fields": [
-    "即梦背景",
-    "男背景"
+    "女背景",
+    "男背景",
+    "男半身背景"
   ],
   "current_product_type": null,
   "result_font_size": 10,
@@ -10,7 +11,7 @@
   "selected_custom_param": null,
   "selected_custom_value": null,
   "custom_params_map": {},
-  "current_template_override": "模特全身居中，镜头与腰平齐，站立场景中央，脚下有真实投影。必须穿鞋，即梦更换匹配风格鞋履，鞋型与脚型协调。\n\n人物特征：{男五官}身体比例真实（头身比7~7.5），无拉伸压缩，避免大头或Q版效果，面部细节自然，禁幼龄化。\n\n服装：\n100%还原产品图款式颜色剪裁细节（口袋/拉链/缝线），不可更改。若仅含部分服装，强制补全缺失（上衣/内搭），确保全身完整。上衣按风格智能搭配（工装裤→T恤/衬衫），配饰≤3处，金属选银冷金暖。体现布料质感（棉质纹理褶皱垂坠感），禁光滑/塑料感。\n\n皮肤：保留毛孔阴影，避免过度磨皮。\n\n背景：{男背景}模糊处理降饱和缩小背景比例，仅留建筑轮廓与灯光，允许轻微杂乱（小物路人）增真实感但不抢镜。\n\n摄影参数：光圈 f/2.8，焦点锁定模特，50mm焦距，写实风，光线明亮高对比，突出服装细节，模特与背景分离。\n\n禁止：赤脚悬浮背景密集Logo水印标准微笑过度对称光滑服装塑料皮肤服装不符鞋子不匹配上衣缺失。特别禁止卡通Q版大眼娃娃脸幼龄化非真人超模比例腿过长头过小裸体或半裸上身。\n\n必须生成：写实摄影风格真人模特自然生活感，全身服装完整无缺失，面部比例真实，背景干净不抢镜，元素丰富有序。",
+  "current_template_override": "构图：强制裁切：画面顶部精准裁切至下胸下缘（上衣仅保留腰部及以下区域，绝对无领口、胸部上半区、颈部、头部露出），仅展示下胸下缘至脚部（含鞋子完整呈现），人物居中自然站立，镜头与腰线平齐，脚下阴影深度 5-8% 灰度。核心：【原图一致性优先】上传裤子 1:1 严格复刻（仅保留颜色、剪裁、口袋、拉链、原生纹理细节与原图完全一致，无任何破损 / 做旧效果，无额外添加 / 修改 / 强化元素），搭配 {男半身穿搭}（纯色为主 + 轻细节百搭款，透气薄款），裤子版型与原图贴合度 100%，腰线外露无遮挡。[背景]：{男半身背景}（夜景），虚化半径≥40px，降饱和 15-20%。摄影：商业服装精修，8K 超高清，\n布光方案：正面主光（45° 前侧柔光，亮度 85%，清晰照亮裤子正面纹理细节）+ 背面轮廓光（侧逆光，亮度 35%，柔和勾勒裤子边缘，无强光溢出）；\n摄影参数：光圈 f/5.6，快门 1/125s，感光度 ISO 400；\n仅呈现裤子原图原生完整纹理，不做任何破损 / 做旧处理，褶皱阴影自然，无过曝 / 欠曝。\n禁止：露出领口 / 胸部上半区 / 颈部 / 头部、修改裤子原图细节、添加任何破损 / 做旧效果、非指定鞋型。\n必须：肩宽 1.5 倍标准肩宽，腿长≥身高 1/2，鞋子完整，画面仅含下胸至脚区域，裤子完整无破损、与原图 100% 一致。",
   "data_file_paths": {
     "templates_file": "/Users/jerry/Documents/GitHub/Prompt/templates.json",
     "settings_file": "/Users/jerry/Documents/GitHub/Prompt/settings.json",
