feat(build): 优化Windows构建脚本并更新模板配置
更新build_win.bat脚本，改进Python检测逻辑和构建流程
修改settings.json中的匹配模式和字体大小设置
添加多个新的模板配置和背景选项到templates.json和used_values.json

--- a/settings.json
+++ b/settings.json
@@ -1,17 +1,23 @@
 {
-  "matching_mode": "sequential",
+  "matching_mode": "random",
   "delete_on_use_fields": [
     "女背景",
+    "男虚化背景",
+    "大气夜景",
     "男背景",
-    "男半身背景"
+    "男半身背景",
+    "最新男夜景",
+    "gemini-男背景"
   ],
   "current_product_type": null,
-  "result_font_size": 10,
+  "result_font_size": 8,
   "last_library_path": "/Users/jerry/Documents/GitHub/Prompt/模版.xlsx",
   "selected_custom_param": null,
   "selected_custom_value": null,
   "custom_params_map": {},
-  "current_template_override": "构图：强制裁切：画面顶部精准裁切至下胸下缘（上衣仅保留腰部及以下区域，绝对无领口、胸部上半区、颈部、头部露出），仅展示下胸下缘至脚部（含鞋子完整呈现），人物居中自然站立，镜头与腰线平齐，脚下阴影深度 5-8% 灰度。核心：【原图一致性优先】上传裤子 1:1 严格复刻（仅保留颜色、剪裁、口袋、拉链、原生纹理细节与原图完全一致，无任何破损 / 做旧效果，无额外添加 / 修改 / 强化元素），搭配 {男半身穿搭}（纯色为主 + 轻细节百搭款，透气薄款），裤子版型与原图贴合度 100%，腰线外露无遮挡。[背景]：{男半身背景}（夜景），虚化半径≥40px，降饱和 15-20%。摄影：商业服装精修，8K 超高清，\n布光方案：正面主光（45° 前侧柔光，亮度 85%，清晰照亮裤子正面纹理细节）+ 背面轮廓光（侧逆光，亮度 35%，柔和勾勒裤子边缘，无强光溢出）；\n摄影参数：光圈 f/5.6，快门 1/125s，感光度 ISO 400；\n仅呈现裤子原图原生完整纹理，不做任何破损 / 做旧处理，褶皱阴影自然，无过曝 / 欠曝。\n禁止：露出领口 / 胸部上半区 / 颈部 / 头部、修改裤子原图细节、添加任何破损 / 做旧效果、非指定鞋型。\n必须：肩宽 1.5 倍标准肩宽，腿长≥身高 1/2，鞋子完整，画面仅含下胸至脚区域，裤子完整无破损、与原图 100% 一致。",
+  "current_template_override": "(顶级商业摄影, 仿佛用蔡司定焦镜头拍摄:1.8), (8k超高清画质, 极其清晰锐利:1.6), (画面整体极其通透, 充满空气感:2.0), (画质干净细腻, 绝对无噪点:1.9).\n(参考图裤子, 工业级复刻:2.0).\n\n### 构图与比例 (半身专用)\n(无头构图, 画面范围下胸部至脚部:1.8), (严禁切脚), (人物居中站立, 正对镜头, 比例真实).\n\n### 光影与清晰度\n(专业三点布光, 光影和谐统一, 拒绝抠图感:1.7).\n(环境光微弱反射于主体边缘, 自然融入场景).\n(主体亮度远高于背景, 焦点锁定裤子, 清晰无比).\n\n### 前景控制 (核心修正)\n(前景: 绝对干净, 只有平整的地面, 严禁任何物体遮挡模特:2.0).\n\n### 背景控制\n(背景必须被深度虚化, 焦外如奶油般化开:2.0).\n(画面必须包含清晰的前景、模糊的中景和虚化的远景三个层次:1.8).\n背景为 {最新男夜景}.\n\n### 穿搭\n搭配 {最新男穿搭}, (上衣扎腰, 腰线清晰).\n\n--no noisy, grainy, blurry subject, underexposed, dark, text, logo, head, face\n",
+  "last_preset_1": "默认模板",
+  "last_preset_2": "默认模板",
   "data_file_paths": {
     "templates_file": "/Users/jerry/Documents/GitHub/Prompt/templates.json",
     "settings_file": "/Users/jerry/Documents/GitHub/Prompt/settings.json",
